sandbox/output
GildedRoseTest.java:106: error: cannot find symbol
            .map(GildedRose.generateUpdatedAgedBrie());
                           ^
  symbol:   method generateUpdatedAgedBrie()
  location: class GildedRose
GildedRoseTest.java:142: error: cannot find symbol
            .map(GildedRose.generateUpdatedAgedBrie());
                           ^
  symbol:   method generateUpdatedAgedBrie()
  location: class GildedRose
2 errors
